--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.7.0",
+    "geist": "^1.1.0",
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
