feat: enable ssr by fixing gradiant background

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
     "paths": {
       "~/*": ["./src/*"]
     },
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     ".eslintrc.cjs",
@@ -31,5 +35,5 @@
     "**/*.mjs",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "./src/components/Background/Gradient.js"]
 }
