--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss-animated": "^1.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
